just need to fix background on smaller screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -79,7 +79,6 @@
     display: grid;
     padding: 0%;
     margin: 0%;
-    margin: auto;
     height: 100%;
     gap: 2%;
     grid-template-areas:
